@@ -10,6 +10,7 @@ import com.telran.org.urlshortener.model.RoleType;
 import com.telran.org.urlshortener.repository.UserJpaRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.authentication.AnonymousAuthenticationToken;
@@ -22,8 +23,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -38,17 +37,27 @@ public class UserServiceImpl implements UserService {
     @Override
     @Transactional
     public UserDTO create(UserCreateDTO dto) {
-        log.debug("create user email={}", dto.getEmail());
-        Optional<User> existing = repository.findByEmail(dto.getEmail());
-        if (existing.isPresent()) {
-            log.warn("User creation failed — email already exists: {}", dto.getEmail());
-            throw new EmailNotUniqueException("User with email " + dto.getEmail() + " already exists.");
+        Objects.requireNonNull(dto, "UserCreateDTO must not be null");
+        String email = normalizeEmail(dto.getEmail());
+        log.debug("create user with email={}", email);
+        String password = normalizePassword(dto.getPassword());
+        if (!email.matches("^[^@]+@[^@]+\\.[^@]+$")) {
+            throw new IllegalArgumentException("Invalid email format");
         }
+        repository.findByEmail(email).ifPresent(u -> {
+            log.warn("User creation failed — email already exists: {}", email);
+            throw new EmailNotUniqueException("User with email " + email + " already exists.");
+        });
         User user = converter.dtoToEntity(dto);
-        user.setPassword(encoder.encode(user.getPassword()));
-        User saved = repository.save(user);
-        log.info("User created id={}, email={}", saved.getId(), saved.getEmail());
-        return converter.entityToDto(saved);
+        user.setEmail(email);
+        user.setPassword(encoder.encode(password));
+        try {
+            User saved = repository.save(user);
+            log.info("User created id={}, email={}", saved.getId(), saved.getEmail());
+            return converter.entityToDto(saved);
+        } catch (DataIntegrityViolationException e) {
+            throw new EmailNotUniqueException("User with email " + email + " already exists.");
+        }
     }
 
     @Override
@@ -56,17 +65,14 @@ public class UserServiceImpl implements UserService {
     @Transactional(readOnly = true)
     public List<UserDTO> findAll() {
         log.debug("findAll users");
-        List<UserDTO> list = repository.findAll().stream()
-                .map(converter::entityToDto)
-                .collect(Collectors.toList());
-        log.info("findAll returned {} users", list.size());
-        return list;
+        return repository.findAll().stream().map(converter::entityToDto).toList();
     }
 
     @Override
     @PreAuthorize("hasRole('ADMIN')")
     @Transactional(readOnly = true)
     public UserDTO findById(long id) {
+        validateId(id);
         log.debug("findById id={}", id);
         return repository.findById(id)
                 .map(user -> {
@@ -83,6 +89,8 @@ public class UserServiceImpl implements UserService {
     @PreAuthorize("hasRole('ADMIN')")
     @Transactional
     public UserDTO update(long id, RoleType newRole) {
+        validateId(id);
+        Objects.requireNonNull(newRole, "Role must not be null");
         log.debug("update user id={}, newRole={}", id, newRole);
         User user = repository.findById(id)
                 .orElseThrow(() -> {
@@ -99,6 +107,7 @@ public class UserServiceImpl implements UserService {
     @PreAuthorize("hasAnyRole('USER', 'ADMIN')")
     @Transactional
     public void delete(long id) {
+        validateId(id);
         User current = getCurrentUser();
         log.debug("delete user id={} by user={}", id, current.getId());
         User userToDelete = repository.findById(id)
@@ -118,18 +127,19 @@ public class UserServiceImpl implements UserService {
     @PreAuthorize("hasAnyRole('USER', 'ADMIN')")
     @Transactional(readOnly = true)
     public UserDTO findByEmail(String email) {
+        String normalized = normalizeEmail(email);
         User current = getCurrentUser();
-        log.debug("findByEmail email={} by user={}", email, current.getId());
-        User user = repository.findByEmail(email)
+        log.debug("findByEmail email={} by user={}", normalized, current.getId());
+        User user = repository.findByEmail(normalized)
                 .orElseThrow(() -> {
-                    log.warn("User not found by email={}", email);
-                    return new UserNotFoundException("User with email " + email + " is not found.");
+                    log.warn("User not found by email={}", normalized);
+                    return new UserNotFoundException("User with email " + normalized + " is not found.");
                 });
-        if (current.getRole() == RoleType.ROLE_USER && !Objects.equals(current.getEmail(), email)) {
-            log.warn("User {} attempted to access another user's data {}", current.getId(), email);
+        if (current.getRole() == RoleType.ROLE_USER && !Objects.equals(current.getEmail(), normalized)) {
+            log.warn("User {} attempted to access another user's data {}", current.getId(), normalized);
             throw new AccessDeniedException("You do not have permission to view this user.");
         }
-        log.info("User found by email={}", email);
+        log.info("User found by email={}", normalized);
         return converter.entityToDto(user);
     }
 
@@ -143,7 +153,7 @@ public class UserServiceImpl implements UserService {
         }
         Object principal = auth.getPrincipal();
         if (principal instanceof UserDetails details) {
-            String email = details.getUsername();
+            String email = normalizeEmail(details.getUsername());
             log.debug("getCurrentUser principal email={}", email);
             return repository.findByEmail(email)
                     .orElseThrow(() -> {
@@ -153,5 +163,17 @@ public class UserServiceImpl implements UserService {
         }
         log.error("Invalid authentication principal type={}", principal.getClass().getName());
         throw new IllegalArgumentException("Cannot obtain user from authentication principal");
+    }
+
+    private void validateId(long id) {
+        if (id <= 0) throw new IllegalArgumentException("Id must be positive");
+    }
+
+    private String normalizeEmail(String email) {
+        return Objects.requireNonNull(email, "email must not be null").trim().toLowerCase();
+    }
+
+    private String normalizePassword(String password) {
+        return Objects.requireNonNull(password, "password must not be null").trim();
     }
 }
